SyntacticAnalyzer/tests/success/clase_atributo.java
class A {
	var boolean b1;
	var char c1;
	var int i1; var String s1;
	var Objeto o1;
}
