SyntacticAnalyzer/tests/fail/atributo02.java
class foo {
// faltan ;
var char a
var int b
}
